force-app/main/default/objects/Hospital__c/fields/LINK__c.field-meta.xml
<CustomField>
    <fullName>LINK__c</fullName>
    <label>LINK</label>
    <required>true</required>
    <type>Url</type>
</CustomField>